refactor models added pgsql data file added docker compose file
