# src/controller/residential_area.go
@@ -22,9 +22,9 @@ var residential_areas []structs.ResidentialArea
 // @Router 			/ResidentialAreas/Search/{search} [get]
 func SearchResidentialArea(client *gin.Context){
 	search := client.Param("search")
-	query = fmt.Sprintf(`SELECT  json_build_object('id', d.id, 'name', d.name, 'code', d.code, 'region', d.region, 'residential_areas', (SELECT json_agg(ra.name) FROM residential_areas ra WHERE ra.district_id=d.id)) as district 
-						FROM districts d, residential_areas r 
-						WHERE r.district_id=d.id AND r.name ILIKE '%s'`,search)
+	query = fmt.Sprintf(`SELECT  json_build_object('district', jsonb_build_object('id', d.id, 'name', d.name, 'code', d.code), 'region', d.region, 'residential_areas', (SELECT json_agg(ra.name) FROM residential_areas ra WHERE ra.district_id=d.id)) as district 
+	FROM districts d, residential_areas r 
+	WHERE r.district_id=d.id AND r.name ilike '%s'`,search)
 	getResidentialArea(client,query)
 }
 
@@ -36,7 +36,7 @@ func SearchResidentialArea(client *gin.Context){
 // @Success 		200 {object} structs.ResidentialArea{}
 // @Router 			/ResidentialAreas [get]
 func GetResidentialAreas(client *gin.Context){
-	query := `SELECT json_build_object('id', d.id, 'name', d.name, 'code', d.code, 'region', d.region, 'residential_areas', (SELECT json_agg(ra.name) FROM residential_areas ra WHERE ra.district_id=d.id)) as district 
+	query := `SELECT json_build_object( 'district', jsonb_build_object('id', d.id, 'name', d.name, 'code', d.code), 'region', d.region, 'residential_areas', (SELECT json_agg(ra.name) FROM residential_areas ra WHERE ra.district_id=d.id)) as district 
 				FROM districts d, residential_areas r 
 				WHERE r.district_id=d.id`
 	getResidentialArea(client,query)
